[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = "0.5"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
rust_decimal = "1"
rust_decimal_macros = "1"
chrono = "0.4.43"

sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "uuid",
    "chrono"
] }
axum = "0.8.8"